--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "description": "",
   "keywords": [],
   "dependencies": {
-    "firebase": "12.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.22.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "firebase": "12.8.0",
+    "react-router-dom": "^6.22.3",
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0"
   },
   "devDependencies": {
     "@types/react": "18.2.43",
     "@types/react-dom": "18.2.17",
     "loader-utils": "3.2.1",
-    "typescript": "5.7.2"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
